<resources>
    <string name="app_name">PhenixDemo</string>

    <!-- head_title_layout中所需配置 -->
    <string name="head_image_default_des">Default icon</string>
    <string name="head_middle_default">多媒体图片库</string>

    <string name="imageview_default_des">Default Image</string>

    <!-- activity_content_main中所需配置 -->
    <string name="text_title1">直接下载图片</string>
    <string name="text_load_direct_des">注：通过网络直接下载图片。在图片比较大或网络条件较差时，会导致下载图片速度很慢。</string>
    <string name="text_load_direct_test">直接下载图片示例</string>

    <string name="text_title2">通过图片库下载图片</string>
    <string name="text_load_phenix_des">注：通过图片库(MediaPhenix)加载网络图片。在首次下载图片后，对图片进行缓存。
        若需要再次加载图片时，则直接从缓存中加载，能够提高图片加载和显示的速度。</string>
    <string name="text_load_phenix_test">通过图片库下载图片示例</string>

    <string name="text_title3">通过图片库加载自定义图片</string>
    <string name="text_load_define_img_des">注：通过图片库(MediaPhenix)加载自定义的网络图片。能够根据需要，加载指定尺寸或分辨率的图片。
        在图片比较大或网络条件较差时，设置较小尺寸或较低质量，能够快速加载图片。</string>
    <string name="text_load_define_img_test">通过图片库加载自定义图片示例</string>

    <!-- activity_test_load_content中所需的配置 -->
    <string name="text_load_image_detail">图片下载详细说明</string>
    <string name="text_load_image_res">图片下载结果统计</string>

    <!-- 程序中会用到的一些介绍功能的字符串-->
    <!-- TestLoadDirectActivity中所需的配置 -->
    <string name="text_title_test_load_direct">直接下载图片</string>
    <string name="detail_load_direct">本示例基于HttpURLConnection加载图片(%s)。在加载时，若文件较大或者网络较差，会导致下载图片时间很长。
        若图片过大，还需要花费时间进行压缩。由于无本地缓存，会导致每次加载图片都要进行网络请求。</string>

    <!-- TestLoadPhenixActivity中所需的配置 -->
    <string name="text_title_test_load_phenix">基于图片库下载图片</string>
    <string name="detail_load_phnix">本示例基于图片库(MediaPhenix)加载图片(%s)。在首次加载时，通过网络下载指定的图片，下载成功的图片会被缓存
        (内存+磁盘)。当重复请求时，能够直接从缓存获取已有图片，以加快图片加载的速度。</string>

    <!-- TestLoadDefineImgActivity中所需的配置 -->
    <string name="text_title_test_load_define_img">基于图片库加载自定义图片</string>
    <string name="detail_load_define_img">本示例基于图片库(MediaPhenix)加载自定义的网络图片(%s)。本示例根据自定义的大小，指定需要从
        百川多媒体空间加载的图片尺寸，服务端会生成合适大小的图片并返回。在图片很大或者网络条件较差时，可以指定较小的图片尺寸或质量，
        以加快下载图片的速度。</string>

</resources>
