<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_load_image_detail"
            style="@style/style_textview_describe_default"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/text_load_image_detail" />

        <ImageView
            android:id="@+id/imageview_load_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="400dp"
            android:maxHeight="400dp"
            android:src="@drawable/icon_loading"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageview_default_des"/>

        <TextView
            android:id="@+id/textview_load_image_result"
            style="@style/style_textview_result_default"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:hint="@string/text_load_image_res" />
    </LinearLayout>
</ScrollView>